# aimapp

./: Dockerfile  README.md  entrypoint.sh  launch_docker.sh  launch_model_as_action_robot.sh  launch_scripts.sh  launch_slam_rviz_laptop.sh  setup_env.bash
aimapp/: .gitignore  CMakeLists.txt  Readme.md  package.xml
aimapp/aimapp/: action_process_no_motion.py  main.py  mcts_reward_visualiser.py  visualisation_tools.py
aimapp/aimapp/model/: MCTS.py  V4_2.py  V5.py  modules.py
aimapp/aimapp/model/pymdp/: __init__.py  agent.py  control.py  default_models.py  inference.py  learning.py  maths.py
aimapp/aimapp/model/pymdp/algos/: mmp.py  mmp_old.py
aimapp/aimapp/model/pymdp/envs/: grid_worlds.py  tmaze.py
aimapp/aimapp/motion/: align_odom_to_belief.py  move_straight_action.py  move_straight_client.py  nav2_client.py  nav2_client_node_goal.py  potential_field_action.py  potential_field_client.py
aimapp/aimapp/obs_transf/: gemini_determine_goal_image.py  get_360_camera_action.py  get_360_camera_client.py  get_360_camera_remote_action.py  get_pano_multiple_camera_action.py  get_panorama_action.py  get_panorama_client.py  take_remote_picture.sh  theta_record.py
aimapp/launch/: agent_launch.py  minimal_agent_launch.py  nav2_humble_launch.py  nav2_husarion_launch.py  play_rosbag.py  slam_launch.py  spawn_turtle_launch.py  warehouse_launch.py  warehouse_spawn_nav2_launch.py
aimapp/map_dm_nav/: action_process_no_motion.py  main.py  visualisation_tools.py
aimapp/map_dm_nav/model/: MCTS.py  V5.py  odometry.py
aimapp/map_dm_nav/model/pymdp/envs/: visual_foraging.py
aimapp/map_dm_nav/motion/: nav2_client.py
aimapp/map_dm_nav/obs_transf/: get_360_camera_client.py  get_360_camera_remote_action.py  get_pano_multiple_camera_client.py  get_panorama_action.py  save_cam_in_folder.py  stitch_images_in_folder.py  take_remote_picture.sh  theta_record.py
aimapp/params/: map_1.pgm  map_2.pgm  mapper_params_online_async.yaml  nav2_husarion.yaml  warehouse_world.yaml
aimapp/rviz/: apf_vectors.rviz  manual_motion.rviz  nav2_default_view.rviz
aimapp/simulation_tools/: node_visualisation.py  node_visualizer.py  publish_path.py  record_cpu_ram_usage.py  remove_turtlebot3_from_gazebo.py  save_data.py  save_slam_map.py  shift_husarion_odom.py  simulation_overview_data_save.py
aimapp/tests/: DEBUG_SCRIPTS_README.md  MCTS_test.py  Node_mapping_tests_v2.ipynb  Node_mapping_tests_v3.ipynb  REPLAY_EXAMPLE.md  Test_model.ipynb  capture_robot_logs.sh  check_robot_health.sh  inductive_inference_tests.ipynb  monitor_robot_diagnostics.sh  move_robot_bag_odom.py  panorama_stitching.py  play_bag_with_logs.py  play_bag_with_logs.sh  print_diagnostics.sh  record_robot_memory.sh  record_run.sh  scale_cmd_vel.py
aimapp_actions/: CMakeLists.txt  package.xml
aimapp_actions/action/: AIFProcess.action  Panorama.action
aimapp_actions/msg/: NavigationResult.msg  NewState.msg
command_GUI_files/: GUI_exploration.sh  GUI_main.py  action_selector_gui.py  action_selector_with_subscriber.py  launch_autonomous_exploration.sh  launch_exploration_gui.py  launch_goal_gui.py  launch_model_as_action_robot.sh  launch_slam_rviz_laptop.sh  send_next_node_goal.sh
map_dm_nav/: .gitignore  CMakeLists.txt  MCTS_test.py  Node_mapping_tests.ipynb  Node_mapping_tests_v2.ipynb  Node_mapping_tests_v3.ipynb  README.md  Readme.md  mcts_aif_test.py  model_mcts_test.py  package.xml
map_dm_nav/launch/: agent_launch.py  minimal_agent_launch.py  nav2_humble_launch.py  nav2_husarion_launch.py  play_rosbag.py  slam_launch.py  spawn_turtle_launch.py  warehouse_launch.py  warehouse_spawn_nav2_launch.py
map_dm_nav/launch/worlds_launch/: aws_robomaker_warehouse_smaller_launch.py  warehouse_mini_launch.py
map_dm_nav/map_dm_nav/: action_process_no_motion.py  main.py  requirements.txt  setup.py  visualisation_tools.py
map_dm_nav/map_dm_nav/model/: MCTS.py  V5.py  modules.py  odometry.py
map_dm_nav/map_dm_nav/model/pymdp/: control.py
map_dm_nav/map_dm_nav/model/pymdp/algos/: fpi.py
map_dm_nav/map_dm_nav/motion/: align_odom_to_belief.py  move_straight_action.py  move_straight_client.py  nav2_client.py  potential_field_action.py  potential_field_client.py
map_dm_nav/map_dm_nav/obs_transf/: get_360_camera_action.py  get_360_camera_client.py  get_360_camera_remote_action.py  get_pano_multiple_camera_action.py  get_pano_multiple_camera_client.py  get_panorama_action.py  get_panorama_client.py  observation_match.py  save_cam_in_folder.py  take_remote_picture.sh  theta_record.py
map_dm_nav/params/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml  nav2_foxy_params.yaml  nav2_humble_params.yaml  nav2_husarion.yaml  warehouse_world.pgm  warehouse_world.yaml
map_dm_nav/rviz/: apf_vectors.rviz  explore.rviz  manual_motion.rviz  nav2_default_view.rviz
map_dm_nav/simulation_tools/: Marker_visualisation.py  node_visualizer.py  publish_path.py  reset_turtlebot3_odom.py  save_data.py  shift_husarion_odom.py  simulation_overview_data_save.py
map_dm_nav/tests/: Node_injection_tests.ipynb  Node_mapping_tests_v2.ipynb  Node_mapping_tests_v3.ipynb  inductive_inference_tests.ipynb  plot_results.ipynb
map_dm_nav_actions/: CMakeLists.txt  package.xml
map_dm_nav_actions/action/: AIFProcess.action  MoveStraight.action
modif_pcks/: small_house.world  spawn_turtlebot3.launch.py  turtlebot3_waffle_pi_plus.urdf
