<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_dm_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daria.family@u.be">idlab332</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>high_level_nav_actions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
